# BitTorrentNetwork

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  connectTo.sh  docker-compose.yml  dockerHelp.txt  installDocker.sh  killAndRemove.sh  runDocker.sh
config/: CMakeLists.txt
config/include/: Config.hpp
config/src/: Config.cpp
peer/: CMakeLists.txt  Dockerfile  Makefile  README  file.json
peer/include/: CommandsParser.h  Functions.hpp  Peer.hpp  PeerClient.hpp  PeerServer.hpp
peer/src/: CommandParser.cpp  Functions.cpp  Peer.cpp  PeerClient.cpp  PeerServer.cpp  main.cpp  peer.cpp
src/peer/: client.cpp  main.cpp
src/tracker/: main.cpp  server.cpp
test/: CMakeLists.txt  tests_main.cpp
test/config/: CMakeLists.txt  ConfigTest.cpp
test/integration/: CMakeLists.txt  HeartbeatTest.cpp
tracker/: CMakeLists.txt  Dockerfile  Makefile  README  peerList.cfg  tracker
tracker/include/: Functions.hpp  TrackerClient.hpp  TrackerServer.hpp
tracker/src/: Functions.cpp  TrackerClient.cpp  TrackerServer.cpp  main.cpp  tracker1.cpp  tracker2.cpp-draft
utils/: CMakeLists.txt
utils/include/: Config.hpp  CustomUtils.hpp  SocketUtils.hpp
utils/src/: Config.cpp  SocketUtils.cpp
